grammar.js
    source_file: $ => optional($.module),

    // module          = package { import } policy
    module: $ =>
      seq(
        $._package,
        repeat($._import),
        optional($.policy),
      ),

    // package         = "package" ref
    _package: $ =>
      seq(
        $.package,
        $.ref,
      ),

    // import          = "import" ref [ "as" var ]
    _import: $ =>
      seq(
        $.import,
        $.ref,
        optional(seq($.as, $.var)),
      ),

    // policy          = { rule }
    policy: $ => repeat1($.rule),

    // rule            = [ "default" ] rule-head { rule-body }
    rule: $ =>
      choice(
        seq(
          optional($.default),
          $.rule_head,
          prec.left(repeat1($.rule_body)),
        ),
        // OPA v1 comp+if rule: `x := 1 if <body>`. The value lives in the
        // head, and the first body is a braced query or a single literal —
        // never a v0 `:= term` body — so a following v0 rule whose head
        // happens to be named `if` cannot be fused in. Dynamic precedence
        // prefers this one-rule parse over "value rule followed by a rule
        // named if".
        prec.dynamic(1, seq(
          optional($.default),
          alias($.rule_head_v1, $.rule_head),
          prec.left(seq(
            alias($.rule_body_v1, $.rule_body),
            repeat(alias($.rule_body_v1_tail, $.rule_body)),
          )),
        )),
      ),

    // rule-head       = var ( rule-head-set | rule-head-obj | rule-head-func | "if" )
    // The head forms share one dynamic precedence: without prec.right on
    // the whole head (which would statically force `var :=` into the v1
    // head and break plain constants), GLR needs an explicit preference
    // for keeping brackets/args/if in the head over demoting them to body
    // literals.
    rule_head: $ =>
      seq(
        $.var,
        optional(prec.dynamic(1, choice(
          // rule-head-set   = ( "contains" term [ "if" ] ) | ( "[" term "]" )
          seq($.contains, $.term, optional($.if)),
          // rule-head-obj   = "[" term "]" [ rule-head-comp ] [ "if" ]
          seq(
            $.open_bracket,
            $.term,
            $.close_bracket,
            optional($.rule_head_comp),
            optional($.if),
          ),
          // rule-head-func  = "(" rule-args ")" [ rule-head-comp ]
          seq(
            seq($.open_paren, $.rule_args, $.close_paren),
            optional($.rule_head_comp),
            optional($.if),
          ),
          // if
          $.if,
        ))),
      ),

    // OPA v1 rule head with the value bound in the head: `x := 1 if`
    rule_body: $ =>
      seq(
        optional(
          seq(
            $.else,
            optional(
              seq(
                $.assignment_operator,
                $.term,
              ),
            ),
            // OPA v1 else clauses: `else := 2 if { ... }` / `else if { ... }`
            optional($.if),
          ),
        ),
        choice(
          $._braced_query,
          $.literal,
          // The bound value of a constant rule: `x := 1` or `x = 1`.
          seq(choice($.assignment, $.unification), $.term),
        ),
      ),

    _braced_query: $ => seq($.open_curly, $.query, $.close_curly),

    // query           = literal { ( ";" | ( [CR] LF ) ) literal }
    query: $ =>
      seq(
        $.literal,
        repeat(
          choice(
            seq(
              choice(';', seq(optional('\r'), '\n')),
              optional($.literal),
            ),
            seq(
              choice(';', seq(optional('\r'), '\n')),
              optional($.with_modifier),
            ),
          ),
        ),
      ),

    // literal         = ( some-decl | expr | "not" expr | logical-expr ) { with-modifier }
    literal: $ =>
      seq(
        choice($.some_decl, $.expr, seq($.not, $.expr), $._logical_expr),
        repeat($.with_modifier),
      ),

    // logical-expr    = logical-and | logical-or | logical-group | "not" logical-group
    //
    // The `and` / `or` future keywords sit at the literal level, not in `expr`:
    // they combine bodies rather than terms, so `p := a or b` and `f(a or b)`
    // are not valid Rego. Precedence, tightest first: not > and > or > with.
    _logical_expr: $ =>
      choice(
        $.logical_and,
        $.logical_or,
        $.logical_group,
        seq($.not, $.logical_group),
      ),

    // logical-and     = logical-operand "and" logical-operand
    some_decl: $ =>
      seq(
        $.some,
        $.term,
        repeat(seq(',', $.term)),
        repeat(seq($.in, $.expr)),
      ),

    // expr            = term | expr-call | expr-infix | expr-every | expr-unary
    expr: $ =>
      prec.left(
        1,
        choice(
          $.term,
          $.expr_call,
          $.expr_infix,
          $.expr_every,
          $.expr_parens,
          $.expr_unary,
        ),
      ),

    // expr-parens     = "(" expr ")"
    expr_call: $ =>
      seq(
        field('func_name', $.fn_name),
        $.open_paren,
        field('func_arguments', optional($.fn_args)),
        $.close_paren,
      ),

    fn_name: $ => seq($.var, optional(seq('.', $.var))),
    fn_args: $ => seq($.expr, repeat(seq(',', $.expr))),

    // expr-infix = expr infix-operator expr
    expr_infix: $ => prec.left(1, seq($.expr, $.infix_operator, $.expr)),

    // expr-every      = "every" var { "," var } "in" ( term | expr-call | expr-infix ) "{" query "}"
    expr_unary: $ => prec.left(-3, seq('-', $.expr)),

    // term            = ref | var | scalar | array | object | set | array-compr | object-compr | set-compr | membership
    term: $ =>
      choice(
        $.ref,
        $.var,
        $.scalar,
        $.array,
        $.object,
        $.set,
        $.array_compr,
        $.object_compr,
        $.set_compr,
        $.membership,
      ),

    // array-compr     = "[" term "|" rule-body "]"
    set_compr: $ =>
      seq(
        $.open_curly,
        $.term,
        '|',
        $.query,
        $.close_curly,
      ),

    // object-compr    = "{" object-item "|" rule-body "}"
    infix_operator: $ =>
      choice(
        prec.left(2, $.assignment_operator),
        $.bool_operator,
        $.arith_operator,
        $.bin_operator,
      ),

    // assignment-operator = ":=" | "="
    assignment_operator: $ => choice($.assignment, $.unification),

    // assignment operator
    assignment: $ => ':=',

    // unification operator
    unification: $ => '=',

    // bool-operator   = "==" | "\!=" | "<" | ">" | ">=" | "<="
    bool_operator: $ =>
      choice(
        '==',
        '\!=',
        '<',
        '>',
        '>=',
        '<=',
      ),

    // arith-operator  = "+" | "-" | "*" | "/" | "%"
    ref: $ =>
      prec.left(
        2,
        seq(
          choice(
            $.var,
            $.array,
            $.object,
            $.set,
            $.array_compr,
            $.object_compr,
            $.set_compr,
            $.expr_call,
          ),
          repeat($.ref_arg),
        ),
      ),

    // ref-arg         = ref-arg-dot | ref-arg-brack
    ref_arg: $ =>
      choice(
        $.ref_arg_dot,
        $.ref_arg_brack,
      ),

    // ref-arg-brack   = "[" ( scalar | var | array | object | set | "_" ) "]"
    ref_arg_brack: $ =>
      seq(
        $.open_bracket,
        choice(
          $.scalar,
          $.var,
          $.array,
          $.object,
          $.set,
          '_',
        ),
        $.close_bracket,
      ),

    // ref-arg-dot     = "." var
    ref_arg_dot: $ => prec.left(2, seq('.', $.var)),

    // var             = ( ALPHA | "_" ) { ALPHA | DIGIT | "_" }
    var: $ => /[A-Za-z_]+\w*/,

    // scalar          = string | NUMBER | TRUE | FALSE | NULL
    scalar: $ =>
      choice(
        $.string,
        $.number,
        $.boolean,
        'null',
      ),

    // string          = STRING | raw-string | interpolated-string-double | interpolated-string-raw
    string: $ => choice(
      $.interpolated_string_double,
      $.interpolated_string_raw,
      $.quoted_string,
      $.raw_string,
    ),

    // quoted-string   = '"' { CHAR } '"'
    // String content needs lexical precedence over the comment token:
    // without it, a '#' in the content lets the comment (which runs to end
    // of line) win the longest-match rule, so `"#fff"` lexed as a comment
    // and corrupted the rest of the parse.
    array: $ =>
      seq(
        $.open_bracket,
        $.term,
        repeat(
          seq(',', $.term),
        ),
        optional(','),
        $.close_bracket,
      ),

    // object          = "{" object-item { "," object-item } "}"
    object: $ =>
      seq(
        $.open_curly,
        $.object_item,
        repeat(
          seq(',', $.object_item),
        ),
        optional(','),
        $.close_curly,
      ),

    // object-item     = ( scalar | ref | var ) ":" term
    object_item: $ =>
      seq(
        field('key', choice($.scalar, $.ref, $.var)),
        ':',
        field('value', $.term),
      ),

    // set             = empty-set | non-empty-set
    boolean: $ => choice('true', 'false'),

    // membership      = term [ "," term ] "in" term
    membership: $ =>
      prec.left(
        -1,
        seq(
          $.term,
          optional(seq(',', $.term)),
          $.in,
          $.term,
        ),
      ),

    // parenthesis
    open_paren: $ => '(',
    close_paren: $ => ')',

    // brackets
    open_bracket: $ => '[',
    close_bracket: $ => ']',

    // curly bracket
    open_curly: $ => '{',
    close_curly: $ => '}',

    // number
    number: $ => /([0-9]*[.])?[0-9]+/,

    // not keyword
    not: $ => 'not',

    // and keyword
    in: $ => 'in',

    // if keyword
    if: $ => 'if',

    // every keyword
    package: $ => 'package',

    // import keyword
    some: $ => 'some',

    // default keyword
    keyword: $ => /[a-z]+/,
  },
});
